--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "axios": "^0.17.1",
     "dotenv": "^4.0.0",
     "xml2js": "^0.4.19"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VickyKoblinski/t2-soap-axios"
   }
 }
